--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -1,13 +1,13 @@
 h1 {
-  text-transform: uppercase;
+  font-size: calc(1.525rem + 3.3vw);
   font-weight: 100;
   line-height: normal;
 }
 
 span {
-  font-size: 1.7em;
+  font-size: calc(1.525rem + 3.3vw);
   font-weight: 100;
-  text-transform: uppercase;
+  line-height: 1.3;
 }
 
 a {
@@ -64,34 +64,23 @@ img:hover {
   transform: scale(1.05);
 }
 
-span:hover {
-  filter: drop-shadow(1px 1px 1px #222);
+a:hover {
+  color: #0dcaf0;
 }
 
 .github-logo {
-  width: 10em;
+  width: 7em;
+  filter: invert(1);
 }
 
 .linkedin-logo {
-  width: 8.5em;
+  width: 6em;
+  filter: invert(1);
 }
 
 .mail-logo {
-  width: 8em;
+  width: 5.5em;
   margin-left: 25px;
   margin-bottom: 5px;
-}
-
-@media screen and (max-width: 520px) {
-  .mail-logo {
-    width: 6em;
-  }
-
-  .github-logo {
-    width: 8em;
-  }
-
-  .linkedin-logo {
-    width: 7em;
-  }
+  filter: invert(1);
 }
