--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,13 @@
 .App {
   font: {
     size: 1em;
-    font-family: "Questrial", sans-serif;
-    weight: 600;
+    family: "Glacial Indifference", sans-serif;
   }
 
   text-align: center;
-  margin: 0em auto 2em;
+  margin: 0 auto 2em;
   max-width: 75em;
-  color: white;
+  color: #000000;
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,11 +17,8 @@ body {
   z-index: 0;
   width: 100%;
   height: 100vh;
-  animation-delay: 3s;
-  animation: mymove 40s;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-timing-function: ease-in-out;
-  font-family: "Questrial", sans-serif;
+  animation: mymove 40s 3s ease-in-out;
+  font-family: "Glacial Indifference", sans-serif;
 }
 
 html {
@@ -31,7 +27,7 @@ html {
 }
 
 #root {
-  background-color: #131022;
+  background: #ffffff;
 }
 
 header {
@@ -48,14 +44,10 @@ header {
 }
 
 h1 {
+  font-family: "Playfair Display", serif;
   text-align: center;
-}
-
-p {
-  border: 3px solid;
-  border-radius: 2.5em;
-  padding: 20px;
-  font-weight: 100;
+  text-transform: uppercase;
+  font-size: 72px;
 }
 
 article {
