--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -17,7 +17,6 @@ a {
   font-size: 1.6em;
   text-decoration: none;
   font-weight: 200;
-  font-family: 'Playfair Display', serif;
   color: #000000;
 }
 
@@ -132,4 +131,16 @@ p {
 
 .text-overlay p {
   margin: 0;
+}
+
+@media screen and (max-width: 520px) {
+
+  h1 {
+    font-size: 2.5rem;
+  };
+
+  p {
+    font-size: 1.1rem;
+    padding: 0;
+  }
 }
